--- a/redesociais/estilos/style.css
+++ b/redesociais/estilos/style.css
@@ -32,3 +32,12 @@ section#telefone{
     width: 311px;    
     background: url('../imagens/frame-iphone.png') no-repeat;
 }
+
+iframe#tela{
+    position: relative;
+    top: 80px;
+    left: 21px;
+    width: 270px;
+    height: 475px;
+    border-radius: 5px;
+}
