--- a/login/estilos/style.css
+++ b/login/estilos/style.css
@@ -31,11 +31,13 @@ section#login{
     height: 500px;
     border-radius: 20px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.452);
+    transition: width .3s, heigth .3s;
+    transition-timing-function: ease;
 }
 section#login > div#imagem{
     display: block;
     background: #014a92 url('../imagens/sigma.jpg') no-repeat center center;
-    background-size: auto;  
+    background-size: contain;  
     height: 200px;
 }
 section#login > div#formulario{
