--- a/login/estilos/style.css
+++ b/login/estilos/style.css
@@ -33,15 +33,97 @@ section#login{
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.452);
     transition: width .3s, heigth .3s;
     transition-timing-function: ease;
+    
 }
 section#login > div#imagem{
     display: block;
     background: #014a92 url('../imagens/sigma.jpg') no-repeat center center;
     background-size: contain;  
-    height: 200px;
+    height: 200px;    
+    
 }
 section#login > div#formulario{
     display: block;
     padding: 10px;
 
+}
+
+div#formulario > h1{
+    text-align: center;
+    margin-bottom: 10px;
+}
+div#formulario > p{
+    font-size: 0.8em;
+}
+div.campo > label{
+    display: none;
+}
+div.campo > span{
+    color: white;
+    /* background-color: black; */
+    font-size: 2em;
+    width: 40px;
+    padding: 5px;
+}
+div.campo > input{
+    background-color: #009dff;
+    font-size: 1em;
+    width: calc(100% - 45px);
+    height: 100%;
+    transform: translateY(-13px);
+    border: 0px;
+    border-radius: 8px;
+    padding: 4px;
+}
+div.campo > input:focus-within{
+    background-color: white;
+    
+}
+
+form > input[type=submit]{
+    display: block;
+    font-size: 1em;
+    width: 100%;
+    height: 40px;
+    background-color: #014286;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    margin-top: 10px;    
+}
+form > input[type=submit]:hover{
+    background-color: #0073BB;
+    color: black;
+}
+
+
+.botao{
+    display: block;
+    text-align: center;
+    font-size: 1em;
+    width: 100%;
+    height: 40px;
+    background-color: #0073BB;
+    border: 1px solid #014286;
+    border-radius: 5px;
+    text-decoration: none;
+    color: white;
+    cursor: pointer;
+    margin-top: 5px;
+}
+.botao:hover{
+    background-color: #C86D3B;
+    border: 1px solid #0073BB;
+    color: black;    
+}
+
+.campo{
+    background-color: #c94701e0;
+    display: block;
+    border: 2px solid #c94701e0;
+    width: 100%;
+    height: 40px;
+    border-radius: 8px;
+    margin: 5px 0px;
 }
