--- a/harrypotter/estilo/style.css
+++ b/harrypotter/estilo/style.css
@@ -12,7 +12,7 @@
 }
 
 body, html{
-    width:100vw;    
+    width:100vw;        
 }
 
 header{    
@@ -85,7 +85,7 @@ h2{
 }
 
 body{
-    background: url('../imagens/1201594.jpg') center center no-repeat;
+    background: url('../imagens/1201594.jpg') center top no-repeat;
     background-color: rgba(0, 0, 0, 0.521);
     background-blend-mode: overlay;
     background-size:cover;
@@ -122,7 +122,7 @@ main > article > p{
 footer{
     background: linear-gradient(130deg,#7c551be5,#810b02d5,#a86602e5,#c78902e3,#444444);
     text-align: center;
-    padding: 30px;
+    padding: 30px;    
     color: black;
     font-weight: 700;
     font-size: 1.4em;
