--- a/harrypotter/estilo/style.css
+++ b/harrypotter/estilo/style.css
@@ -9,6 +9,7 @@
     font-family: Arial, Helvetica, sans-serif;
     margin: 0px;
     padding: 0px;
+    
 }
 
 body, html{
@@ -17,48 +18,43 @@ body, html{
 
 header{    
     background: linear-gradient(130deg,#7c551be5,#810b02d5,#a86602e5,#c78902e3,#444444);
-    padding: 10px;
-    height: 240px;
+    padding: 10px;    
 }
 
-span#burguer{       
-    color: black;
-    text-align: left;
+span#burguer{
+    background-color: rgb(48, 48, 48);
+    display: block;
+    color: white;
+    text-align: center;
     padding: 10px;
     cursor: pointer;
-    text-shadow: 1px 1px 1px white;
 }
 span#burguer:hover{
-    
-    color: white;
-    text-shadow: 1px 1px 1px black;
+    background-color: white;
+    color: black;
 }
 
 nav{
     display: none;
 }
-
-nav > ul > li{
-    display: inline-block;    
-}
-
- li > a{
-    width: 100px;        
-    display: block;        
-    padding: 10px;
-    text-decoration: none;
-    text-shadow: 1px 1px 1px white;
-    text-align: center;
-    font-size: 1.8em;
-    font-weight: 900;
-    font-family: 'harryp';    
-    color: black;
-    text-align: center;  
-    box-shadow: 1px 1px 3px black;
-}
-ul{    
+nav > ul{
     list-style-type: none;
 }
+ li > a{
+    display: block;
+    width: 100px;
+    padding: 20px;
+    text-decoration: none;
+    background-color: rgb(70, 69, 69);
+    color: white;
+    text-align: center;
+    border-top: 2px solid gray;
+}
+ li > a:hover{
+    background-color: gray;
+}
+
+
 
 h1{
     font-family: 'Harryp';
@@ -97,7 +93,8 @@ main > article{
     display: block;
     margin: auto;
     margin-bottom: 20px;            
-    margin-top: 20px;    
+    margin-top: 50px;
+    margin-bottom: 50px;    
     text-shadow: 1px 1px 2px black;    
     background-color: rgb(145, 97, 66);    
     border-radius: 10px;
@@ -133,4 +130,6 @@ footer > p > a{
     color: black;
     font-family: 'harryp';
     font-size: 1.5em;
+
+    
 }
