--- a/harrypotter/estilo/style.css
+++ b/harrypotter/estilo/style.css
@@ -22,38 +22,58 @@ header{
 }
 
 span#burguer{
-    background-color: rgb(48, 48, 48);
+    
     display: block;
-    color: white;
+    color: black;
     text-align: center;
     padding: 10px;
     cursor: pointer;
+    text-shadow: 1px 1px 1px white;
 }
 span#burguer:hover{
-    background-color: white;
-    color: black;
+    
+    color: white;
+    text-shadow: 1px 1px 1px black;
 }
 
 nav{
     display: none;
 }
-nav > ul{
+ul{
     list-style-type: none;
 }
+
  li > a{
-    display: block;
-    width: 100px;
+    display: block;     
     padding: 20px;
-    text-decoration: none;
-    background-color: rgb(70, 69, 69);
-    color: white;
+    text-decoration: none; 
+    font-weight: 700;   
+    color: black;
+    text-shadow: 1px 1px 1px white;
     text-align: center;
-    border-top: 2px solid gray;
+    border-top: 2px solid black;
+    box-shadow: 1px 1px 4px black;
 }
  li > a:hover{
-    background-color: gray;
+    color: white;
+    text-shadow: 1px 1px 1px black;
+    background-color: brown;
 }
 
+ul li ul#sobre{
+    display: flex;
+    flex-direction: column;    
+}
+ul li ul#sobre li a{
+    color: white;   
+    text-shadow: 1px 1px 1px black;
+    background-color: #810b02d5;
+}
+ul li ul#sobre li a:hover{
+    color: black;   
+    text-shadow: 1px 1px 1px white;
+    background-color: #a86602e5;
+}
 
 
 h1{
@@ -103,6 +123,32 @@ main > article{
 }
 
 main > article > p{
+    
+    margin: 5px;
+    padding: 10px;
+    color: #ffffff;    
+    text-indent: 30px;
+    text-align: justify; 
+    font-weight: 700;   
+    font-size: 1.2em;
+    line-height: 1.6em;
+    text-shadow: 1px 1px 1px rgb(0, 0, 0);    
+   
+}
+
+main section{
+    width: 80vw;
+    display: block;
+    margin: auto;
+    margin-bottom: 20px;            
+    margin-top: 50px;
+    margin-bottom: 50px;    
+    text-shadow: 1px 1px 2px black;    
+    background-color: rgb(145, 97, 66);    
+    border-radius: 10px;
+    box-shadow: 2px 2px 3px rgba(129, 69, 0, 0.719);
+}
+main > section > p{
     
     margin: 5px;
     padding: 10px;
