--- a/harrypotter/estilo/media-query.css
+++ b/harrypotter/estilo/media-query.css
@@ -4,10 +4,11 @@
     span#burguer{
         display: none;
     }
-
+    
     nav{
         display: block;
-    }
+             
+    }    
 
     nav li{
         display: inline-block;
@@ -17,8 +18,15 @@
         width: 100px;
     }
 
+    main article{
+        width: 60vw;
+    }
+    main section{
+        width: 60vw;
+    }
+
     ul li ul#sobre{
-        position:absolute;
+        position:absolute; 
         margin-top: 10px;        
         display: flex;
         flex-direction: row;
