--- a/harrypotter/estilo/style.css
+++ b/harrypotter/estilo/style.css
@@ -45,7 +45,7 @@ ul{
     list-style-type: none;
 }
 
- li > a{
+ nav ul li > a{
     display: block;     
     padding: 20px;
     text-decoration: none; 
