--- a/harrypotter/estilo/style.css
+++ b/harrypotter/estilo/style.css
@@ -16,8 +16,11 @@ body, html{
     width:100vw;        
 }
 
-body.curi, main.curi{
-    background-color: rgb(0, 0, 0);
+body.curi{
+    background: url('../imagens/1201594.jpg') center top repeat;
+    background-color: rgba(0, 0, 0, 0.521);
+    background-blend-mode: overlay;
+    background-size:contain;
 }
 
 header{    
